# devstack-core

./: .env.example  .gitignore  .gitleaks.toml  .gitleaksignore  .pre-commit-config.yaml  .secrets.baseline  LICENSE  Makefile  README.md  TASK_PROGRESS.md  devstack  docker-compose.yml  profiles.yaml
.github/: CHANGELOG-test-fixes.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
configs/: network.yaml
docs/: .DOCUMENTATION_IMPROVEMENTS_SUMMARY.md  ACKNOWLEDGEMENTS.md  (+39 more)
reference-apps/rust/: .dockerignore  Cargo.toml  Dockerfile  README.md
reference-apps/rust/src/: main.rs  tests.rs
reference-apps/rust/tests/: api_test.sh
tests/: README.md  TEST_COVERAGE.md  performance-benchmark.sh  pyproject.toml  requirements.txt  run-all-tests.sh  setup-test-env.sh  test-approle-auth.sh  test-approle-complete.sh  test-approle-security.sh  test-approle.sh  test-backup-encryption.sh  test-backup-restore.sh  test-backup-verification.sh  test-disaster-recovery.sh  test-documentation-accuracy.sh  test-fastapi.sh  test-forgejo-approle.sh  test-incremental-backup.sh  test-load.sh  test-management-approle.sh  test-mongodb-approle.sh  test-mongodb-init-fix.sh  test-mongodb.sh  test-mysql-approle.sh  test-mysql.sh  test-negative.sh  test-network-segmentation.sh  test-observability.sh  test-performance-regression.sh  test-performance.sh  test-pgbouncer.sh  test-postgres-approle.sh  test-postgres-extended.sh  test-postgres.sh  test-rabbitmq-approle.sh  test-rabbitmq.sh  test-redis-approle.sh  test-redis-cluster.sh  test-redis-failover.sh  (+15 more)
(+341 files in other folders)
