[project]
name = "devstack-core-tests"
version = "0.1.0"
description = "Test suite for DevStack Core with Vault integration"
requires-python = ">=3.9"
dependencies = [
    "psycopg2-binary>=2.9.0",
    "mysql-connector-python>=8.0.0",
    "redis>=5.0.0",
    "pika>=1.3.0",
    "pymongo>=4.0.0",
]

[dependency-groups]
dev = [
    "ipython",
]
